--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "asyncpg>=0.31.0",
     "environs>=14.5.0",
     "fastapi[standard]>=0.123.5",
+    "gigachat>=0.1.43",
     "google-genai>=1.52.0",
     "pydantic>=2.12.5",
     "sqlalchemy>=2.0.44",
