--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.21.0",
     "alembic>=1.17.2",
     "asyncpg>=0.31.0",
     "environs>=14.5.0",
     "fastapi[standard]>=0.123.5",
     "gigachat>=0.1.43",
     "google-genai>=1.52.0",
+    "httpx>=0.28.1",
     "pydantic>=2.12.5",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
     "sqlalchemy>=2.0.44",
 ]
